fixed issue with double vertical scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 .App {
   text-align: center;
   position: relative;
-  min-height: 100vh;
-  overflow-x: hidden;
-
 }
 
